# TSystFitter

./: .gitignore  CMakeLists.txt  CompileAllClasses.cxx  LICENSE.md  PerformRealSystFit.cxx  PerformRealSystFit2.cxx  PerformSystFit.cxx  README.md  SumHistos_LHC16r.root  TH1Syst.cxx  TH1Syst.h  TSystFitParameter.cxx  TSystFitParameter.h  TSystFitSettings.cxx  TSystFitSettings.h  TSystFitter.cxx  TSystFitter.h  dati.root  read_dati.cpp  testCombinations.cxx
